fix dty-core and languages
branch: dev
user: senyun.yao

--- a/native/res/i18n/dty-test-core.json
+++ b/native/res/i18n/dty-test-core.json
@@ -35,9 +35,9 @@
         "default": "总计: 成功 (%d)  失败 (%d)  跳过 (%d)"
     },
     "__DTY_TEST_CORE_CONSOLE_TOTAL_COLLECTION__": {
-        "ch": "总计: \\033[1;32;成功 (%d)\\033[0m \\033[1;31;失败 (%d)\\033[0m 跳过 (%d)\\n",
+        "ch": "总计: \\033[1;32;40m成功(%d)\\033[0m \\033[1;31;40m失败(%d)\\033[0m 跳过(%d)\\n",
         "en": "Total: \\033[1;32;40mSuccess(%d)\\033[0m \\033[1;31;40mFailed(%d)\\033[0m Skipped(%d)\\n",
-        "default": "总计: \\033[1;32;成功 (%d)\\033[0m \\033[1;31;失败 (%d)\\033[0m 跳过 (%d)\\n"
+        "default": "总计: \\033[1;32;40m成功(%d)\\033[0m \\033[1;31;40m失败(%d)\\033[0m 跳过(%d)\\n"
     },
     "__DTY_TEST_CORE_FLOW_START__": {
         "ch": "[-------] 流测试 - 开始",
