--- a/resource/i18n/config.json
+++ b/resource/i18n/config.json
@@ -1,6 +1,6 @@
 {
     "core": {
-        "source": ["dty-core", "dty-test-core"],
+        "source": ["tianyu-core", "tianyu-test-core"],
         "description": [
             "天宇静态多语言文件",
             "Dev Tianyu Static Language File"
